--- a/src/styles/_event.scss
+++ b/src/styles/_event.scss
@@ -4,19 +4,19 @@
     padding: 80px 0;
     
     &--frontend {
-        background-image: linear-gradient(variables.$blue1, variables.$blue2);
+        background-image: linear-gradient(variables.$yellow1, variables.$yellow2);
     }
 
     &--ux-ui {
-        background-image: linear-gradient(variables.$blue2, variables.$pink);
+        background-image: linear-gradient(variables.$yellow2, variables.$yellow1);
     }
 
     &--data-science {
-        background-image: linear-gradient(variables.$pink, variables.$yellow);
+        background-image: linear-gradient(variables.$yellow1, variables.$yellow2);
     }
 
     &--backend {
-        background-image: linear-gradient(variables.$yellow, variables.$pink);
+        background-image: linear-gradient(variables.$yellow2, variables.$yellow1);
     }
 
     &--image-left {
@@ -34,6 +34,7 @@
             font-size: 18px;
             font-weight: bold;
             margin-bottom: 16px;
+            text-transform: uppercase;
         }
 
         &__description {
@@ -46,6 +47,8 @@
     }
 
     @media (max-width: 640px) {
+        text-align: center;
+        
         .container {
             display: block;
         }
