--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,8 +2,5 @@ $textColor: #fff;
 $secondaryTextColor: #000;
 
 
-$blue1: #1B6CA7;
-$blue2: #442BDB;
-$pink: #89223B;
-$yellow: #9C791D;
-$purple: #4F2AC3;
+$yellow1: rgb(170, 105, 0);
+$yellow2: rgb(207, 207, 0);
