definindo altura hero e pondo hover filter no button

--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -3,6 +3,7 @@
 .hero {
     padding-top: 48px;
     padding-bottom: 72px;
+    height: 574px;
     background-image: url(../images/fundo.png);
     background-repeat: no-repeat;
     background-size: cover;
